objects/AVA_SFCPQ__MultiCompanyMapping__c.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCPQ__AvaCompanyCode__c</fullName>
        <label>Ava Company Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__CustomObject__c</fullName>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__SFCompanyId__c</fullName>
        <label>SF Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__SubsidiaryName__c</fullName>
        <label>Subsidiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Multi Company Mapping</label>
    <listViews>
        <fullName>AVA_SFCPQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MultiCompanyMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multi Company Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>